syntax = "proto3";
package greeter;

option java_multiple_files = true;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc SayHelloStream (HelloRequest) returns (stream HelloReply) {}
  rpc SayHelloBiStream (stream HelloRequest) returns (stream HelloReply) {}
}


message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}